; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_tls_crypt.c_test_tls_crypt_v2_setup.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_tls_crypt.c_test_tls_crypt_v2_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_tls_crypt_v2_context = type { %struct.TYPE_3__, %struct.TYPE_4__, i32, i32, i8*, i8*, i8* }
%struct.TYPE_3__ = type { i32, i64 }
%struct.TYPE_4__ = type { i32, i64 }
%struct.key_type = type { i32 }

@TLS_CRYPT_V2_MAX_METADATA_LEN = common dso_local global i64 0, align 8
@TLS_CRYPT_V2_MAX_WKC_LEN = common dso_local global i64 0, align 8
@KEY_DIRECTION_BIDIRECTIONAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"tls-crypt-v2 server key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @test_tls_crypt_v2_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_tls_crypt_v2_setup(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca %struct.test_tls_crypt_v2_context*, align 8
  %4 = alloca %struct.key_type, align 4
  store i8** %0, i8*** %2, align 8
  %5 = call %struct.test_tls_crypt_v2_context* @calloc(i32 1, i32 64)
  store %struct.test_tls_crypt_v2_context* %5, %struct.test_tls_crypt_v2_context** %3, align 8
  %6 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %7 = bitcast %struct.test_tls_crypt_v2_context* %6 to i8*
  %8 = load i8**, i8*** %2, align 8
  store i8* %7, i8** %8, align 8
  %9 = call i32 (...) @gc_new()
  %10 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %11 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 4
  %12 = load i64, i64* @TLS_CRYPT_V2_MAX_METADATA_LEN, align 8
  %13 = add nsw i64 %12, 16
  %14 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %15 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %14, i32 0, i32 3
  %16 = call i8* @alloc_buf_gc(i64 %13, i32* %15)
  %17 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %18 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %17, i32 0, i32 6
  store i8* %16, i8** %18, align 8
  %19 = load i64, i64* @TLS_CRYPT_V2_MAX_METADATA_LEN, align 8
  %20 = add nsw i64 %19, 16
  %21 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %22 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %21, i32 0, i32 3
  %23 = call i8* @alloc_buf_gc(i64 %20, i32* %22)
  %24 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %25 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %24, i32 0, i32 5
  store i8* %23, i8** %25, align 8
  %26 = load i64, i64* @TLS_CRYPT_V2_MAX_WKC_LEN, align 8
  %27 = add nsw i64 %26, 16
  %28 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %29 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %28, i32 0, i32 3
  %30 = call i8* @alloc_buf_gc(i64 %27, i32* %29)
  %31 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %32 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %31, i32 0, i32 4
  store i8* %30, i8** %32, align 8
  %33 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %34 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = inttoptr i64 %36 to i8*
  %38 = call i32 @rand_bytes(i8* %37, i32 8)
  %39 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %40 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %39, i32 0, i32 1
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  store i32 2, i32* %41, align 8
  %42 = call i32 (...) @tls_crypt_kt()
  %43 = getelementptr inbounds %struct.key_type, %struct.key_type* %4, i32 0, i32 0
  store i32 %42, i32* %43, align 4
  %44 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %45 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %44, i32 0, i32 2
  %46 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %47 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %46, i32 0, i32 1
  %48 = load i32, i32* @KEY_DIRECTION_BIDIRECTIONAL, align 4
  %49 = call i32 @init_key_ctx_bi(i32* %45, %struct.TYPE_4__* %47, i32 %48, %struct.key_type* %4, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %50 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %51 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 1
  %53 = load i64, i64* %52, align 8
  %54 = inttoptr i64 %53 to i8*
  %55 = call i32 @rand_bytes(i8* %54, i32 8)
  %56 = load %struct.test_tls_crypt_v2_context*, %struct.test_tls_crypt_v2_context** %3, align 8
  %57 = getelementptr inbounds %struct.test_tls_crypt_v2_context, %struct.test_tls_crypt_v2_context* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %57, i32 0, i32 0
  store i32 2, i32* %58, align 8
  ret i32 0
}

declare dso_local %struct.test_tls_crypt_v2_context* @calloc(i32, i32) #1

declare dso_local i32 @gc_new(...) #1

declare dso_local i8* @alloc_buf_gc(i64, i32*) #1

declare dso_local i32 @rand_bytes(i8*, i32) #1

declare dso_local i32 @tls_crypt_kt(...) #1

declare dso_local i32 @init_key_ctx_bi(i32*, %struct.TYPE_4__*, i32, %struct.key_type*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
